--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<% if user_signed_in? %>
+
+  <h1>Current user:</h1>
+  <p>Welcome <%= current_user.first_name %> <%= current_user.last_name %></p>
+  <%= link_to 'logout', destroy_user_session_path, method: :delete %>
+<% else %>
+
+  <h1>Current user:</h1>
+  <p>There is no user at this point</p>
+  <%= link_to 'login', new_user_session_path %>
+
+<% end %>
